[gd_scene load_steps=3 format=3 uid="uid://blcby0jk7u4wm"]

[ext_resource type="Script" uid="uid://dqhxa4tw7noaa" path="res://mainmenu.gd" id="1_e8kt5"]
[ext_resource type="Texture2D" uid="uid://jsui27qh7rn8" path="res://assets/background/Mainmenubg.png" id="2_mxk1q"]

[node name="Mainmenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e8kt5")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 28.0
offset_right = 1386.0
offset_bottom = 1219.0
texture = ExtResource("2_mxk1q")
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 289.0
offset_top = 130.0
offset_right = 1045.0
offset_bottom = 995.0
alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "PLAY"

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="LeaderboardButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Leaderboard"

[node name="AchievementsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Achievements"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"
